--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -364,90 +364,84 @@ jobs:
         if: steps.upload_attempt_2.outcome == 'failure'
         id: upload_attempt_3
 
-  # OpenBSD is not very well-supported, given that it's tier 3. We skip clippy and only run basic tests + fmt.
-  # We also use `--no-default-features` when building as starship-battery does not support OpenBSD.
-  unsupported-check-openbsd:
-    needs: pre-job
-    if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
-    runs-on: "ubuntu-latest"
-    timeout-minutes: 15
-    strategy:
-      fail-fast: false
-      matrix:
-        info:
-          # Cross doesn't support OpenBSD, so we do it with VMs here too.
-          - { os_release: "7.8", target: "x86_64-unknown-openbsd" } # Supports Rust 1.90
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-        with:
-          fetch-depth: 1
+  # # OpenBSD is not very well-supported, given that it's tier 3. We skip clippy and only run basic tests + fmt.
+  # # We also use `--no-default-features` when building as starship-battery does not support OpenBSD.
+  # unsupported-check-openbsd:
+  #   needs: pre-job
+  #   if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
+  #   runs-on: "ubuntu-latest"
+  #   timeout-minutes: 15
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       info:
+  #         # Cross doesn't support OpenBSD, so we do it with VMs here too.
+  #         - { os_release: "7.8", target: "x86_64-unknown-openbsd" } # Supports Rust 1.90
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+  #       with:
+  #         fetch-depth: 1
 
-      - name: Enable Rust cache
-        uses: Swatinem/rust-cache@f13886b937689c021905a6b90929199931d60db1 # 2.8.1
-        if: ${{ github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork }} # If it is a PR, only if not a fork
-        with:
-          key: ${{ matrix.info.target }}-${{ matrix.info.os_release }}
-          cache-all-crates: true
+  #     - name: Enable Rust cache
+  #       uses: Swatinem/rust-cache@f13886b937689c021905a6b90929199931d60db1 # 2.8.1
+  #       if: ${{ github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork }} # If it is a PR, only if not a fork
+  #       with:
+  #         key: ${{ matrix.info.target }}-${{ matrix.info.os_release }}
+  #         cache-all-crates: true
 
-      # The VM jobs randomly fail, and since GHA clearly never fails and doesn't know how to retry, we retry manually.
-      - name: OpenBSD Tests + Clippy (Attempt 1)
-        uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
-        with:
-          release: "${{ matrix.info.os_release }}"
-          envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
-          usesh: true
-          prepare: |
-            pkg_add rust rust-rustfmt
-          run: |
-            cargo fmt --all -- --check
-            # Note this only tests the default features, but I think that's fine.
-            # We also do not run clippy because OpenBSD tends to lag behind due to
-            # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
-            # cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
-            # For now, we only run build since one test doesn't play nice.
-            cargo build --locked --no-default-features
-        id: upload_attempt_1
-        continue-on-error: true
+  #     # The VM jobs randomly fail, and since GHA clearly never fails and doesn't know how to retry, we retry manually.
+  #     - name: OpenBSD Tests + Clippy (Attempt 1)
+  #       uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
+  #       with:
+  #         release: "${{ matrix.info.os_release }}"
+  #         envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
+  #         usesh: true
+  #         prepare: |
+  #           pkg_add rust rust-rustfmt
+  #         run: |
+  #           cargo fmt --all -- --check
+  #           # Note this only tests the default features, but I think that's fine.
+  #           # We also do not run clippy because OpenBSD tends to lag behind due to
+  #           # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
+  #           cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
+  #       id: upload_attempt_1
+  #       continue-on-error: true
 
-      - name: OpenBSD Tests + Clippy (Attempt 2)
-        uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
-        with:
-          release: "${{ matrix.info.os_release }}"
-          envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
-          usesh: true
-          prepare: |
-            pkg_add rust rust-rustfmt
-          run: |
-            cargo fmt --all -- --check
-            # Note this only tests the default features, but I think that's fine.
-            # We also do not run clippy because OpenBSD tends to lag behind due to
-            # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
-            # cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
-            # For now, we only run build since one test doesn't play nice.
-            cargo build --locked --no-default-features
-        if: steps.upload_attempt_1.outcome == 'failure'
-        id: upload_attempt_2
-        continue-on-error: true
+  #     - name: OpenBSD Tests + Clippy (Attempt 2)
+  #       uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
+  #       with:
+  #         release: "${{ matrix.info.os_release }}"
+  #         envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
+  #         usesh: true
+  #         prepare: |
+  #           pkg_add rust rust-rustfmt
+  #         run: |
+  #           cargo fmt --all -- --check
+  #           # Note this only tests the default features, but I think that's fine.
+  #           # We also do not run clippy because OpenBSD tends to lag behind due to
+  #           # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
+  #           cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
+  #       if: steps.upload_attempt_1.outcome == 'failure'
+  #       id: upload_attempt_2
+  #       continue-on-error: true
 
-      - name: OpenBSD Tests + Clippy (Attempt 3)
-        uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
-        with:
-          release: "${{ matrix.info.os_release }}"
-          envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
-          usesh: true
-          prepare: |
-            pkg_add rust rust-rustfmt
-          run: |
-            cargo fmt --all -- --check
-            # Note this only tests the default features, but I think that's fine.
-            # We also do not run clippy because OpenBSD tends to lag behind due to
-            # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
-            # cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
-            # For now, we only run build since one test doesn't play nice.
-            cargo build --locked --no-default-features
-        if: steps.upload_attempt_2.outcome == 'failure'
-        id: upload_attempt_3
+  #     - name: OpenBSD Tests + Clippy (Attempt 3)
+  #       uses: vmactions/openbsd-vm@9a8e4351a4a0dc6238e7c69276dcbf6c03bea576 # v1.3.6
+  #       with:
+  #         release: "${{ matrix.info.os_release }}"
+  #         envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
+  #         usesh: true
+  #         prepare: |
+  #           pkg_add rust rust-rustfmt
+  #         run: |
+  #           cargo fmt --all -- --check
+  #           # Note this only tests the default features, but I think that's fine.
+  #           # We also do not run clippy because OpenBSD tends to lag behind due to
+  #           # it being tier 3 (see https://github.com/eza-community/eza/pull/1669).
+  #           cargo test --no-fail-fast --locked --no-default-features -- --nocapture --quiet
+  #       if: steps.upload_attempt_2.outcome == 'failure'
+  #       id: upload_attempt_3
 
   completion:
     name: "CI Pass Check"
